	* tests/*:
	  - All test programs are now TAP-ready. Now you can run all test programs
	    by 'make check'.(Thanks to @jtojnar) (closes #117)
	* qrinput.c:
	  - Return value was ignored. (Thanks to @xiaoyur347) (closed #143)
	* README.md, NEWS:
	  - Various documentation improvements and updates.
	[release-4.1.0]
	* Bumped version to 4.1.0.

2020.02.23 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* CMakeLists.txt, README.md:
	  - Merged #158 (Thanks to @neheb):
	    - Fixed the compile-time issue of the environment without libpng.

2020.02.23 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* README.md:
	  - Merged #151 (Thanks to @NancyLi1013):
	    - Added vcpkg installation instructions.

2018.11.09 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* configure.ac, README.md:
	  - Merged #137 (Thanks to @abelbeck and @charmander):
	    - 'too many arguments' bug has been fixed.

2018.07.28 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* CMakeLists.txt:
	  - Merged #133 (Thanks to @sdf5):
	    - Change CMAKE_SORUCE_DIR to CMAKE_CURRENT_SORUCE_DIR in
		  CMAKE_MODULE_PATH

2018.06.14 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* qrenc.c, qrencode.1.in, README.md, NEWS:
	  - UTF8 mode now supports ANSI256 color. (Thanks to András Veres-
	    Szentkirályi)

2018.06.07 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* CMakeLists.txt, tests/CMakeLists.txt:
	  - Merged #131 (Thanks to @mgorny):
	    - Update paths inside the pkg-config file to respect GNUInstallDirs.
	    - Improve pthread support for the main library when building via CMake.
	    - Always build libdecoder as static library.

2018.06.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master, 4.0]
	* tests/Makefile.am:
	  - Add missing test_basic.sh to EXTRA_DIST. (merged #127) (Thanks to
	    @mgorny)
	* CMakeLists.txt:
	  - Use CMake GNUInstallDirs module to provide variables for configurable
	    install directories. (merged #128) (Thanks to @mgorny)
	[4.0]